--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "angularFastMatcher.js",
   "repository": "https://github.com/dtao/angular-fast-matcher",
   "devDependencies": {
+    "async": "^0.9.0",
+    "cheerio": "^0.17.0",
     "gulp": "^3.5.6",
     "gulp-browserify": "^0.5.0"
   },
